# Linkedin-Scrapper

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
deploy/: docker-compose.yml
rust-scraper/: .dockerignore  Cargo.toml  Dockerfile
rust-scraper/src/: cache.rs  error.rs  lib.rs  main.rs  models.rs  rate_limiter.rs  scraper.rs  session.rs
rust-scraper/tests/: cache_test.rs  integration_test.rs  rate_limiter_test.rs  scraper_test.rs  test_utils.rs
server/: .dockerignore  Dockerfile  package-lock.json  package.json
server/src/: config.js  index.js  monitoring.js
server/src/controllers/: resumeController.js
server/src/docs/: swagger.js
server/src/middleware/: auth.js  rateLimiter.js  validator.js
server/src/routes/: api.js
server/src/services/: linkedinService.js
server/src/utils/: transformer.js
server/tests/: api.test.js
